tests/ui/resolve/issue-22692.stderr
error[E0423]: expected value, found struct `String`
  --> $DIR/issue-22692.rs:8:13
   |
LL |     let _ = String.new();
   |             ^^^^^^
   |
help: use the path separator to refer to an item
   |
LL |     let _ = String::new();
   |                   ~~

error[E0423]: expected value, found struct `String`
  --> $DIR/issue-22692.rs:12:13
   |
LL |     let _ = String.default;
   |             ^^^^^^
   |
help: use the path separator to refer to an item
   |
LL |     let _ = String::default;
   |                   ~~

error[E0423]: expected value, found struct `Vec`
  --> $DIR/issue-22692.rs:16:13
   |
LL |     let _ = Vec::<()>.with_capacity(1);
   |             ^^^^^^^^^
   |
help: use the path separator to refer to an item
   |
LL |     let _ = Vec::<()>::with_capacity(1);
   |                      ~~

error[E0423]: expected value, found type alias `Foo`
  --> $DIR/issue-22692.rs:20:13
   |
LL |     let _ = Foo.default;
   |             ^^^
   |
help: use the path separator to refer to an item
   |
LL |     let _ = Foo::default;
   |                ~~

error[E0423]: expected value, found enum `Bar`
  --> $DIR/issue-22692.rs:24:13
   |
LL |     let _ = Bar.A;
   |             ^^^
   |
help: use the path separator to refer to an item
   |
LL |     let _ = Bar::A;
   |                ~~

error[E0423]: expected value, found enum `Bar`
  --> $DIR/issue-22692.rs:28:13
   |
LL |     let _ = Bar.B(42);
   |             ^^^
   |
help: use the path separator to refer to an item
   |
LL |     let _ = Bar::B(42);
   |                ~~

error[E0423]: expected value, found struct `std::cell::Cell`
  --> $DIR/issue-22692.rs:35:9
   |
LL |         ::std::cell::Cell
   |         ^^^^^^^^^^^^^^^^^
...
LL |     Type!().get();
   |     ------- in this macro invocation
   |
   = note: this error originates in the macro `Type` (in Nightly builds, run with -Z macro-backtrace for more info)
help: use the path separator to refer to an item
   |
LL |     <Type!()>::get();
   |     ~~~~~~~~~~~

error[E0423]: expected value, found struct `std::cell::Cell`
  --> $DIR/issue-22692.rs:35:9
   |
LL |         ::std::cell::Cell
   |         ^^^^^^^^^^^^^^^^^
...
LL |     Type! {}.get;
   |     -------- in this macro invocation
   |
   = note: this error originates in the macro `Type` (in Nightly builds, run with -Z macro-backtrace for more info)
help: use the path separator to refer to an item
   |
LL |     <Type! {}>::get;
   |     ~~~~~~~~~~~~

error[E0423]: expected value, found struct `Vec`
  --> $DIR/issue-22692.rs:44:9
   |
LL |         Vec.new()
   |         ^^^
...
LL |     let _ = create!(type method);
   |             -------------------- in this macro invocation
   |
   = note: this error originates in the macro `create` (in Nightly builds, run with -Z macro-backtrace for more info)
help: use the path separator to refer to an item
   |
LL |         Vec::new()
   |            ~~

error[E0423]: expected value, found struct `Vec`
  --> $DIR/issue-22692.rs:49:9
   |
LL |         Vec.new
   |         ^^^
...
LL |     let _ = create!(type field);
   |             ------------------- in this macro invocation
   |
   = note: this error originates in the macro `create` (in Nightly builds, run with -Z macro-backtrace for more info)
help: use the path separator to refer to an item
   |
LL |         Vec::new
   |            ~~

error[E0423]: expected value, found struct `std::cell::Cell`
  --> $DIR/issue-22692.rs:35:9
   |
LL |         ::std::cell::Cell
   |         ^^^^^^^^^^^^^^^^^
...
LL |     let _ = create!(macro method);
   |             --------------------- in this macro invocation
   |
   = note: this error originates in the macro `Type` which comes from the expansion of the macro `create` (in Nightly builds, run with -Z macro-backtrace for more info)
help: use the path separator to refer to an item
   |
LL |         <Type!()>::new(0)
   |         ~~~~~~~~~~~

error: aborting due to 11 previous errors

For more information about this error, try `rustc --explain E0423`.
